2008-07-08  Thijs Vermeir  <thijsvermeir@gmail.com>

	patch by: Ilja Pavkovic <illsen@gumblfarz.de>

	* gst/librfb/gstrfbsrc.c:
	* gst/librfb/rfbdecoder.c:
	Add property for shared desktop

2008-07-08  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* configure.ac:
	Don't include ERROR_CFLAGS in GST_CXXFLAGS as it might include
	flags that are invalid for C++.

2008-07-08  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* ext/spc/gstspc.c: (spc_setup):
	* gst/deinterlace2/tvtime/tomsmocomp/SearchLoopTop.inc:
	Don't use declarations after statements in the remaining code.

2008-07-08  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	Patch by:
	  Jonathan Rosser <jonathan dot rosser at rd dot bbc dot co dot uk>

	* ext/metadata/metadataexif.c: (metadataparse_handle_unit_tags):
	* ext/metadata/metadataxmp.c:
	(metadataparse_xmp_iter_add_to_tag_list):
	* ext/mythtv/gstmythtvsrc.c: (gst_mythtv_src_start):
	* ext/timidity/gstwildmidi.c: (gst_wildmidi_loop):
	Don't use declarations after statements.

2008-07-07  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	patch by: Alessandro Decina

	* gst/mpegtsparse/mpegtsparse.c:
	Fix memory leak by unreffing structures when not needed.
	Fixes #539292.

2008-07-07  Stefan Kost  <ensonic@users.sf.net>

	* gst/sdp/gstsdpdemux.c:
	  Use floating point math for latencies < 0 sec in log output.

2008-07-06  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/deinterlace2/tvtime/tomsmocomp/TomsMoCompAll2.inc:
	Mark internal processing functions as static inline for quite some
	speedup as they're used only once and need to get many local variables
	passed as parameter.

2008-07-05  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/deinterlace2/gstdeinterlace2.c:
	(gst_deinterlace_method_deinterlace_frame),
	(gst_deinterlace2_set_method), (gst_deinterlace2_init),
	(gst_deinterlace2_reset_history), (gst_deinterlace2_reset),
	(gst_deinterlace2_set_property), (gst_deinterlace2_get_property),